# faas-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
contract/: deeplink-vectors.json  markup-vectors.json  status-machine.json  webhook-vectors.json
examples/: README.md  quickstart.py  webhook_server.py
mystars_faas/: __init__.py  _transport.py  _validate.py  _version.py  async_client.py  cli.py  client.py  errors.py  markup.py  models.py  payment.py  reconcile.py  webhook.py
mystars_faas/integrations/: __init__.py  fastapi.py  flask.py
tests/: conftest.py  test_async_client.py  test_cli_and_payment.py  test_client.py  test_contract_parity.py  test_errors.py  test_hardening.py  test_markup.py  test_transport.py
